basic disj conj added

--- a/main.html
+++ b/main.html
@@ -1,1 +1,6 @@
-<html>\n</html>
+<html>
+  <head>
+    <script type="text/javascript" src="microKanren.js"></script>
+  </head>
+  <body></body>
+</html>
