implemented up to ext_s

--- a/main.html
+++ b/main.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="microKanren.js"></script>
+    <script type="text/javascript" src="microKanrenTests.js"></script>
   </head>
   <body></body>
 </html>
